<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption_login"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/dicoding_primary_dark"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginHorizontal="36dp"
        android:hint="@string/hint_email"
        app:layout_constraintTop_toBottomOf="@id/tv_title">
    </androidx.appcompat.widget.AppCompatEditText>

    <com.dicoding.storyapp.presentation.customview.MyPasswordEditText
        android:id="@+id/ed_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="36dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email">
    </com.dicoding.storyapp.presentation.customview.MyPasswordEditText>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/caption_login"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password"
        app:layout_constraintEnd_toEndOf="@id/ed_login_password"
        app:layout_constraintStart_toStartOf="@id/ed_login_password">
    </Button>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/caption_register"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>